# flet-swapi

./: README.md  pyproject.toml
src/: app.py  main.py  navigation_rail.py  settings.py
src/components/: __init__.py  person.py
src/models/: person.py
src/swapi/: people.py
