[tool.poetry]
name = "api-sample"
version = "0.1.0"
description = ""
authors = ["MartinMoser1 <martin.moser1@innio.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.1.65"
requests = "^2.28.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
